# tally

./: pyproject.toml
src/tally/: cli.py  compare.py  int_distribution.py  parse.py  probabilities.py  query.py  render.py
test/tally/: test_compare.py  test_int_distribution.py  test_parse.py
